force-app/main/default/objects/LLC_BI__Communication_Provider__c/fields/LLC_BI__Billable__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this communication provider is billed via the LifeCycle product</description>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>