force-app/main/default/objects/LLC_BI__Communication_Provider__c/fields/LLC_BI__IsActive__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is optional. It is manually populated. It identifies whether a Third Party Communication Provider can send data to nCino. Checked = True. Unchecked = False.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>